# pybind11_examples

./: .gitignore  LICENSE  README.md  environment.yaml
.github/workflows/: ci.yml
01_py-list_cpp-vector/: example.cpp  readme.md  test.py
02_py-nested-list_cpp-nested-vector/: example.cpp  readme.md  test.py
03_numpy-1D_cpp-vector/: CMakeLists.txt  example.cpp  readme.md  test.py
04_numpy-2D_cpp-eigen/: readme.md
04_numpy-2D_cpp-vector/: example.cpp  readme.md  test.py
05_numpy-2D_cpp-eigen/: example.cpp  readme.md  test.py
05_numpy-2D_cpp-vector/: readme.md
06_class-numpy-eigen/: CMakeLists.txt  example.cpp  test.py
07_cpp-overload-scalar/: CMakeLists.txt  example.cpp  readme.md
07_overload/: CMakeLists.txt  test.py
08_cpp-overload-eigen/: example.cpp  readme.md  test.py
08_overload-eigen/: example.cpp  readme.md  test.py
09_numpy_cpp-custom-matrix/: example.cpp  matrix.h  pybind_matrix.h  test.py
10_enum/: CMakeLists.txt  example.cpp  test.py
11_class-parent-child/: example.cpp  test.py
12_crtp/: CMakeLists.txt  example.py  main.cpp
13_static_cast/: CMakeLists.txt  code_and_wrapper.cpp  test.py
14_cmake_findpython/: CMakeLists.txt  example.py  main.cpp
class-numpy-eigen/: readme.md
numpy-1D_cpp-vector/: example.cpp  readme.md
numpy-2D_cpp-eigen/: test.py
numpy-2D_cpp-vector/: example.cpp  readme.md  test.py
py-list_cpp-vector/: example.cpp  test.py
py-nested-list_cpp-nested-vector/: test.py
